# minute-local

./: .env.example  .env.local  .gitattributes  .gitignore  Makefile  README.md  docker-compose.local.yaml  pyproject.toml  setup.ps1  setup.sh
alembic/versions/: a1b2c3d4e5f6_add_processing_stage_to_transcription.py
backend/: Dockerfile  entrypoint.sh
backend/api/routes/: __init__.py  status.py  transcriptions.py
common/: logger.py  settings.py  types.py
common/audio/: diarization.py
common/database/: postgres_models.py
common/llm/: client.py
common/llm/adapters/: __init__.py  ollama.py
common/services/: exceptions.py  transcription_handler_service.py
common/services/storage_services/: __init__.py
common/services/transcription_services/: transcription_manager.py  whisper_local.py
frontend/app/status/: page.tsx
frontend/app/transcriptions/[transcriptionId]/: page.tsx
frontend/components/: status-icon.tsx
frontend/components/layout/: header.tsx
frontend/components/recent-meetings/: transcription-card.tsx
worker/: Dockerfile  entrypoint.sh
